--- a/src/patternfly/components/Menu/examples/Menu.css
+++ b/src/patternfly/components/Menu/examples/Menu.css
@@ -1,19 +1,11 @@
 [id^="ws-core-c-menu-with-flyout"],
 [id^="ws-core-c-menu-standard-menu-flyout-child"] {
   display: flex;
-  height: 400px;
+  height: 360px;
 }
 
-#ws-core-c-menu-with-flyout-menu-top {
-  align-items: flex-end;
-}
-
-#ws-core-c-menu-with-flyout-menu-left {
-  justify-content: flex-end;
-}
-
+#ws-core-c-menu-with-flyout-menu-left,
 #ws-core-c-menu-with-flyout-menu-left-top {
-  align-items: flex-end;
   justify-content: flex-end;
 }
 
@@ -23,4 +15,8 @@
 
 :is([id="ws-core-c-menu-drilldown-with-breadcrumbs---level-3"], [id="ws-core-c-menu-drilldown-with-breadcrumbs---level-4"]) .pf-v5-c-breadcrumb__dropdown .pf-v5-c-menu {
   position: absolute;
+}
+
+.pf-v5-c-menu__breadcrumb .pf-v5-c-menu {
+  z-index: 1;
 }
