--- a/src/patternfly/components/Menu/menu-item.hbs
+++ b/src/patternfly/components/Menu/menu-item.hbs
@@ -12,7 +12,7 @@
       {{#if menu-list-item--IsDisabled}}
         tabindex="-1"
       {{/if}}
-    {{else}}
+    {{else if (hasNone menu-list-item--IsLoading)}}
       type="button"
       {{#if menu-list-item--IsDisabled}}
         disabled
