fix(menu-toggle): updates for alpha

--- a/src/patternfly/components/Menu/menu-item.hbs
+++ b/src/patternfly/components/Menu/menu-item.hbs
@@ -2,7 +2,7 @@
   {{#if menu-item--IsSelected}} pf-m-selected{{/if}}
   {{#if menu-list-item--IsCurrent}} pf-m-current{{/if}}"
   {{#if menu-list-item--IsCheckbox}}
-    for="{{menu--id}}-check-{{menu-list-item--id}}"
+    for="{{menu--id}}-check-{{menu-list-item--id}}-input"
   {{else}}
     {{#if menu-item--IsLink}}
       href="#"
